conexion oracle-registro

--- a/app/src/main/res/layout/activity_agregar_ticket.xml
+++ b/app/src/main/res/layout/activity_agregar_ticket.xml
@@ -39,7 +39,7 @@
             android:hint="Author" />
 
         <EditText
-            android:id="@+id/etEmail"
+            android:id="@+id/txtEmailreg"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Email" />
