--- a/app/src/main/res/layout/activity_logeo.xml
+++ b/app/src/main/res/layout/activity_logeo.xml
@@ -16,13 +16,13 @@
         tools:context=".LoginActivity">
 
         <EditText
-            android:id="@+id/etEmail"
+            android:id="@+id/txtEmailreg"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Email" />
 
         <EditText
-            android:id="@+id/etPassword"
+            android:id="@+id/txtPasswordreg"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Password"
