--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -9,7 +9,7 @@
 
 
     <EditText
-        android:id="@+id/etUsername"
+        android:id="@+id/etUsernamereg"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Username"
@@ -21,7 +21,7 @@
         app:layout_constraintVertical_bias="0.361" />
 
     <EditText
-        android:id="@+id/etEmail"
+        android:id="@+id/txtEmailreg"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Email"
@@ -33,7 +33,7 @@
         app:layout_constraintVertical_bias="0.183" />
 
     <EditText
-        android:id="@+id/etPassword"
+        android:id="@+id/txtPasswordreg"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Password"
