--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -7,54 +7,142 @@
     android:layout_height="match_parent"
     tools:context=".Registro">
 
-
-    <EditText
-        android:id="@+id/etUsernamereg"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Username"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.361" />
+        android:layout_height="match_parent"
+        android:background="@drawable/loginbkg"
+        android:gravity="center"
+        android:orientation="vertical"
+        tools:context=".RegisterActivity"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="0dp">
 
-    <EditText
-        android:id="@+id/txtEmailreg"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Email"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.183" />
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="30dp"
+            app:cardCornerRadius="30dp"
+            app:cardElevation="20dp">
 
-    <EditText
-        android:id="@+id/txtPasswordreg"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Password"
-        android:inputType="textPassword"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.272" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:background="@drawable/custom_edittext"
+                android:orientation="vertical"
+                android:padding="24dp">
 
-    <Button
-        android:id="@+id/btnRegister"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Register"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.532"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.499" />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Register"
+                    android:id="@+id/registerText"
+                    android:textSize="36dp"
+                    android:textAlignment="center"
+                    android:textStyle="bold"
+                    android:textColor="@color/lavanda" />
+
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:id="@+id/etUsernamereg"
+                    android:background="@drawable/custom_edittext"
+                    android:layout_margin="20dp"
+                    android:padding="8dp"
+                    android:hint="Username"
+                    android:drawableLeft="@drawable/baseline_account_circle_24"
+                    android:textColor="@color/black"
+                    android:drawablePadding="8dp" />
+
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:id="@+id/txtEmailreg"
+                    android:background="@drawable/custom_edittext"
+                    android:layout_margin="20dp"
+                    android:padding="8dp"
+                    android:hint="Email"
+                    android:drawableLeft="@drawable/ic_mail"
+                    android:textColor="@color/black"
+                    android:drawablePadding="8dp" />
+
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:id="@+id/txtPasswordreg"
+                    android:background="@drawable/custom_edittext"
+                    android:layout_margin="20dp"
+                    android:inputType="textPassword"
+                    android:padding="8dp"
+                    android:hint="Password"
+                    android:drawableLeft="@drawable/baseline_lock_24"
+                    android:textColor="@color/black"
+                    android:drawablePadding="8dp" />
+
+                <ImageView
+                    android:id="@+id/imgVerPassword"
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
+                    android:layout_gravity="end"
+                    android:layout_marginEnd="30dp"
+                    android:layout_marginTop="-55dp"
+                    android:src="@drawable/ic_ojo" />
+
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:id="@+id/txtConfirmarPasswordreg"
+                    android:background="@drawable/custom_edittext"
+                    android:layout_margin="20dp"
+                    android:inputType="textPassword"
+                    android:padding="8dp"
+                    android:hint="Confirm Password"
+                    android:drawableLeft="@drawable/baseline_lock_24"
+                    android:textColor="@color/black"
+                    android:drawablePadding="8dp" />
+
+                <ImageView
+                    android:id="@+id/imgVerConfirmacionPassword"
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
+                    android:layout_gravity="end"
+                    android:layout_marginEnd="30dp"
+                    android:layout_marginTop="-55dp"
+                    android:src="@drawable/ic_ojo" />
+
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="60dp"
+                    android:text="Register"
+                    android:id="@+id/btnRegister"
+                    android:textSize="18sp"
+                    android:layout_marginTop="30dp"
+                    android:backgroundTint="@color/lavanda"
+                    app:cornerRadius="20dp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="¿Ya tienes cuenta?"
+                    android:textColor="#000000"
+                    android:textSize="20sp"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="20dp"
+                    android:id="@+id/textView19" />
+
+                <Button
+                    android:layout_width="204dp"
+                    android:layout_height="48dp"
+                    android:background="@drawable/login_button"
+                    android:text="Iniciar sesión"
+                    android:textColor="#FFFFFF"
+                    android:id="@+id/btnRegresarLogin"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="10dp" />
+
+            </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
